Update propertyUpload HTML

--- a/WebApp12Angular/src/app/property-upload/propertyUpload.component.css
+++ b/WebApp12Angular/src/app/property-upload/propertyUpload.component.css
@@ -1,4 +1,6 @@
-
+.myBody{
+  background-image: url("../../assets/bg_1.jpg");
+}
 
 .myContainer {
     display: flex;
@@ -7,7 +9,7 @@
     justify-content: center;
     width: 100%;
     min-height: 100%;
-    padding: 40px;
+    padding: 200px;
     
   }
 
@@ -26,7 +28,7 @@
     background:#ffffff;
   }
 
-  textarea{
+  .textarea{
     background-color: #f6f6f6 !important;
     border:none;
     border-bottom: 2px solid cornflowerblue;
@@ -53,12 +55,13 @@
   .botonDesp1{
     text-align: left;
     position: relative;
-    top: 20px;
-    left: 50px;
+    top: 35px;
+    left: 5px;
     font-weight: normal;
     font-size: 18px;
     height: 0px;
-    width: 30%; }
+    width: 30%;
+    margin-left: -10px; }
     
   .botonDesp2{
     text-align: center;
@@ -77,3 +80,38 @@
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
       }
+
+      input[type=button], input[type=submit], input[type=reset]  {
+        background-color: #56baed;
+        border: none;
+        color: white;
+        padding: 15px 80px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        text-transform: uppercase;
+        font-size: 13px;
+        -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+        box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+        -webkit-border-radius: 5px 5px 5px 5px;
+        border-radius: 5px 5px 5px 5px;
+        margin: 40px 20px 40px 20px;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -ms-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+      }
+      
+      input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
+        background-color:   #39ace7;
+      }
+      
+      input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
+        -moz-transform: scale(0.95);
+        -webkit-transform: scale(0.95);
+        -o-transform: scale(0.95);
+        -ms-transform: scale(0.95);
+        transform: scale(0.95);
+      }
+      
