--- a/WebApp12Angular/src/app/app.component.html
+++ b/WebApp12Angular/src/app/app.component.html
@@ -8,6 +8,7 @@
         </mat-toolbar-row>
     </mat-toolbar> -->
 
+    <!--<myHeader class="sticky-top d-block">-->
     <myHeader>
 
     </myHeader>
