--- a/WebApp12Angular/src/app/property-upload/propertyUpload.component.html
+++ b/WebApp12Angular/src/app/property-upload/propertyUpload.component.html
@@ -107,7 +107,7 @@
                                 </form>
                                 <label for="file">Select image:</label>
                                     <input required type="file" id="file" name="file" multiple>
-                                    <input type="submit">
+                                    <input type="submit" (click)="addAdvertisement()" >
                             </div>
                         </div>
                         </body>
