Delete, create and update components and methods created for blog and steps for image upload to a blog

--- a/WebApp12Angular/src/app/app.component.html
+++ b/WebApp12Angular/src/app/app.component.html
@@ -9,12 +9,9 @@
     </mat-toolbar> -->
 
     <!--<myHeader class="sticky-top d-block">-->
-    <myHeader>
-
-    </myHeader>
+    <myHeader></myHeader>
 
     <!-- <div flex layout-gt-sm="row" tdMediaToggle="gt-xs" layout-wrap [mediaClasses]="['push-sm']">
-
         <div flex-gt-sm="100">
             <router-outlet></router-outlet>
         </div>
