Recommended advertisements showing when a user logs and it is not an admin

--- a/WebApp12Angular/src/app/pages/home/home.component.html
+++ b/WebApp12Angular/src/app/pages/home/home.component.html
@@ -55,7 +55,7 @@
     </div>
   </div>
   </div>
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center justify-content-center">
       <div class="text text-center content-center" id = "containerPresentation">
         <h1 class="mb-4">Encuentra ya <br>tu próxima propiedad</h1>
@@ -108,24 +108,22 @@
         </form>
       </div>
     </div>
-  </div>
- 
-
- 
+  </div> -->
 </div>
 
-
+<!-- <recommendeds></recommendeds> -->
 
 <div class="container" *ngIf="showRecommend" style="padding-top: 50px;"> 
   <!-- <canvas id="myChart" width="800" height="600"></canvas> -->
 
 
-
+<div>
 <app-recomendaciones
 [items]="items"
 [showDelete] = "showDelete"
 [showFavo] = "showFavo"
 >
-</app-recomendaciones> 
+</app-recomendaciones>
+</div>
 </div>
 
