--- a/WebApp12Angular/src/app/advertisement/advertisement.component.html
+++ b/WebApp12Angular/src/app/advertisement/advertisement.component.html
@@ -1,4 +1,59 @@
-<mat-card>
+<div class="row">
+  <div class="offset-lg-2 col-lg-8  col-md-12">
+    <div class="text text-center content-center" id = "containerPresentation">
+      <h1 class="mb-4">Encuentra ya <br>tu próxima propiedad</h1>
+      <p style="font-size: 18px;">Introduce la zona deseada y disfruta de nuestro catálogo de viviendas</p>
+      <form  class="search-location mt-md-5">
+        <div class="row justify-content-center search-form">
+          <div class="col-lg-12 align-items-end">
+            <div class="form-group">
+              <div class="form-field">
+              <div class="row">
+              <a class="filter">Busqueda de:</a>
+              <select [(ngModel)]="searchType" name= "searchType" class="selectInput"> 
+                <option value="Alquiler">Alquiler</option>
+                <option value="Venta">Venta</option>
+              </select>
+              <a class="filter">Tipo de propiedad:</a>
+              <select [(ngModel)]="propertyType" name= "propertyType" class="selectInput"> 
+                <option value="Casa">Casa</option>
+                <option value="Piso">Piso</option>
+                <option value="Local">Local</option>
+              </select>
+              <label class="filter">Metros Cuadrados:</label>
+              <input [(ngModel)]="squareMeters" name= "squareMeters" value="25" class="numberInput" type="number" min="10" max="250">
+            </div>
+            <div class="row">
+              <a class="filter"> Número de habitaciones:</a>
+              <select  [(ngModel)]="rooms" name = "rooms" class="selectInput" > 
+                <option value="1">1 o Más</option>
+                <option value="2">2 o Más</option>
+                <option value="3">3 o Más</option>
+              </select>
+              <a class="filter"> Número de baÃ±os:</a>
+
+              <select [(ngModel)]="bathrooms" name="bathrooms" class="selectInput"> 
+                <option value="1">1 o Más</option>
+                <option value="2">2 o Más</option>
+                <option value="3">3 o Más</option>
+              </select>
+            
+              <label class="filter" >Precio:</label>
+              <input [(ngModel)]="price" class="numberInput" value="1000"  name= "price" type="number" max="5000000">
+              
+              </div>
+                <input type="text" [(ngModel)]="location" name = "location" class="form-control search" placeholder="Introduce una zona">
+                <button type="submit" (click)="search(location,price,rooms,propertyType,searchType,squareMeters,bathrooms)" ><i class="fa fa-search" aria-hidden="true"></i></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+  </div>
+
+<!-- <mat-card>
   <mat-divider></mat-divider>
   <mat-card-content>
     <mat-card-title>
@@ -27,11 +82,11 @@
               <button type="button" class="d-flex align-advertisements-center justify-content-center btn-custom">
                 <span class="icon-star-o"></span>
 
-              </button>
-              <!--  <a href="/addFavourite/16" class="d-flex align-advertisements-center justify-content-center btn-custom">
+              </button> -->
+<!--  <a href="/addFavourite/16" class="d-flex align-advertisements-center justify-content-center btn-custom">
                         <span class="icon-star-o"></span>
                       </a> -->
-            </div>
+<!-- </div>
           </a>
         </mat-list-advertisement>
 
@@ -58,11 +113,11 @@
             <button type="button" class="d-flex align-advertisements-center justify-content-center btn-custom">
               <span class="icon-star-o"></span>
 
-            </button>
-            <!--  <a href="/addFavourite/16" class="d-flex align-advertisements-center justify-content-center btn-custom">
+            </button> -->
+<!--  <a href="/addFavourite/16" class="d-flex align-advertisements-center justify-content-center btn-custom">
                             <span class="icon-star-o"></span>
                           </a> -->
-          </div>
+<!-- </div>
         </a>
       </mat-nav-list>
     </div>
@@ -75,4 +130,4 @@
       </button>
     </div>
   </mat-card-content>
-</mat-card>
+</mat-card> -->
