--- a/WebApp12Angular/src/app/advertisement/advertisement.component.html
+++ b/WebApp12Angular/src/app/advertisement/advertisement.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="offset-lg-2 col-lg-8  col-md-12">
-    <div class="text text-center content-center" id = "containerPresentation">
+    <div class="text text-center content-center" id = "containerPresentation"  style="margin-top: 100px;">
       <h1 class="mb-4">Encuentra ya <br>tu próxima propiedad</h1>
       <p style="font-size: 18px;">Introduce la zona deseada y disfruta de nuestro catálogo de viviendas</p>
       <form  class="search-location mt-md-5">
@@ -30,7 +30,7 @@
                 <option value="2">2 o Más</option>
                 <option value="3">3 o Más</option>
               </select>
-              <a class="filter"> Número de baÃ±os:</a>
+              <a class="filter"> Número de baños:</a><s></s>
 
               <select [(ngModel)]="bathrooms" name="bathrooms" class="selectInput"> 
                 <option value="1">1 o Más</option>
