--- a/WebApp12Angular/src/app/blog-list.component.html
+++ b/WebApp12Angular/src/app/blog-list.component.html
@@ -20,7 +20,7 @@
 
     <div class="container">
       <div class="row d-flex">
-        <div class="col-md-3 d-flex " *ngFor="let blog of blogs">
+        <div class="col-md-3 d-flex " *ngFor="let blog of blogs | slice : startPage:paginationLimit">
           <div class="blog-entry justify-content-end">
             <div class="text">
               <h3 class="heading titulo" >
@@ -45,6 +45,8 @@
           </div>
         </div>
       </div>
+      <input type="button" *ngIf ="paginationLimit < blogs.length" (click)="showMoreItems()" value= "Show more"/>
+      <input type="button" *ngIf ="paginationLimit > 4" (click)="showLessItems()" value= "Show less"/>
     </div>
   </div>
 </section>
