--- a/WebApp12Angular/src/app/pages/home/home.component.html
+++ b/WebApp12Angular/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div style="margin-top: 100px;" >
+<div >
 
 <div class=" hero-wrap-2 ftco-degree-bg js-fullheight" style="background-image: url('assets/static/images/bg_1.jpg');" data-stellar-background-ratio="0.5">
   <advertisementSearch></advertisementSearch>
