--- a/WebApp12Angular/src/app/components/recomendaciones/recomendaciones.component.html
+++ b/WebApp12Angular/src/app/components/recomendaciones/recomendaciones.component.html
@@ -30,9 +30,7 @@
           >
           <span class="icon-trash"></span>
         </button>
-          <button type="button"class="d-flex align-items-center justify-content-center btn-custom"
-          (click)="agregarFavoritos(item.id)" *ngIf="showFavo"
-          >
+          <button type="button"class="d-flex align-items-center justify-content-center btn-custom"(click)="agregarFavoritos(item.id)" *ngIf="showFavo">
             <span class="icon-star-o"></span>
 
           </button>
