--- a/WebApp12Angular/src/app/advertisement/listAllAdvertisements.component.html
+++ b/WebApp12Angular/src/app/advertisement/listAllAdvertisements.component.html
@@ -1,4 +1,4 @@
-<section class="hero-wrap hero-wrap-2 ftco-degree-bg js-fullheight" style="background-image: url(assets/bg_1.jpg); height: 781px; background-position: 50% 179.75px;" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2 ftco-degree-bg js-fullheight" style="background-image: url(assets/bg_1.jpg); height: 781px; " data-stellar-background-ratio="0.5">
 
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" style="height: 781px; z-index: -1">
             <div class="col-md-9 ftco-animate pb-5 text-center fadeInUp ftco-animated">
@@ -22,7 +22,7 @@
                                         </ul>
                                         <h3><a [routerLink]="['/advertisement', advertisement.id]">Casa en {{advertisement.location}}</a></h3>
                                         <span class="location">{{advertisement.location}}</span>
-                                        <a class="d-flex align-items-center justify-content-center btn-custom">
+                                        <a class="d-flex align-items-center justify-content-center btn-custom" (click)="deleteAdvertisement(advertisement.id)">
                                             <span class="icon-trash"></span>
                                         </a>
                                     </div>
