--- a/WebApp12Angular/src/app/advertisement/listAllAdvertisements.component.html
+++ b/WebApp12Angular/src/app/advertisement/listAllAdvertisements.component.html
@@ -20,7 +20,7 @@
                                             <li><span class="flaticon-bathtub"></span>{{advertisement.bathrooms}}</li>
                                             <li><span class="flaticon-floor-plan"></span>{{advertisement.squareMeters}}</li>
                                         </ul>
-                                        <h3><a [routerLink]="['/advertisement', advertisement.id]">Casa en {{advertisement.location}}</a></h3>
+                                        <h3><a [routerLink]="['/advertisement', advertisement.id]">{{advertisement.property}} en {{advertisement.location}}</a></h3>
                                         <span class="location">{{advertisement.location}}</span>
                                         <a class="d-flex align-items-center justify-content-center btn-custom" (click)="deleteAdvertisement(advertisement.id)">
                                             <span class="icon-trash"></span>
