--- a/WebApp12Angular/src/app/advertisement/advertisement-single.component.html
+++ b/WebApp12Angular/src/app/advertisement/advertisement-single.component.html
@@ -88,6 +88,9 @@
               {{advertisement.bathrooms}} baños amplios.</p>
           </div>
           <div class="tab-pane fade" id="pills-review" role="tabpanel" aria-labelledby="pills-review-tab">
+            <div *ngIf='isLogged'>
+            <commentMessage></commentMessage>
+            </div>
             <p> Si quiere leer las opiniones o poner una reseña tiene que registrarse. </p>
             <p>Si desea resgistrarse ves a la pestaña "Home" y clicka arriba a la derecha en "Acceso Usuario". </p>
           </div>
