Fixed bug related to Advertisement and Comment

--- a/WebApp12Angular/src/app/comment.component.html
+++ b/WebApp12Angular/src/app/comment.component.html
@@ -1,6 +1,6 @@
 
 <div >
-    <textarea [(ngModel)]="comment"></textarea>
+    <textarea [(ngModel)]="message"></textarea>
     <br>
     <br>
     <button (click)="post()">Comment</button>
