--- a/WebApp12Angular/src/app/advertisement/advertisement-single.component.html
+++ b/WebApp12Angular/src/app/advertisement/advertisement-single.component.html
@@ -13,6 +13,7 @@
   </div>
 </section>
 
+
 <section class="ftco-section ftco-property-details">
   <div class="container">
     <div class="row justify-content-center">
@@ -88,9 +89,9 @@
               {{advertisement.bathrooms}} baños amplios.</p>
           </div>
           <div class="tab-pane fade" id="pills-review" role="tabpanel" aria-labelledby="pills-review-tab">
-            <!-- <div *ngIf='isLogged'>
+            <div *ngIf="isLogged">
             <commentMessage></commentMessage>
-            </div> -->
+            </div>
             <p> Si quiere leer las opiniones o poner una reseña tiene que registrarse. </p>
             <p>Si desea resgistrarse ves a la pestaña "Home" y clicka arriba a la derecha en "Acceso Usuario". </p>
           </div>
@@ -99,4 +100,6 @@
     </div>
   </div>
   </div>
+
+  
 </section>
