--- a/WebApp12Angular/src/app/comment.component.html
+++ b/WebApp12Angular/src/app/comment.component.html
@@ -1,13 +1,15 @@
 <div >
-    <textarea [(ngModel)]="message"></textarea>
+    <textarea class="form-control" rows="5" [(ngModel)]="message"></textarea>
     <br>
     <br>
-    <button (click)="uploadComment(comment.id)">Comment</button>
+    <button  class ="btn btn-succes btn-md pull-right"(click)="uploadComment(comment.id)">Comment</button>
     <div *ngFor= "let comment of comments">
+        <li class="list-group-item">
         <p>{{comment.author}}</p>
         <p>{{comment.message}}</p>
+        </li>
         <a class="btn d-flex align-items-center btn-custom-edit" id="deleteMethod" style="float:left;" (click)="deleteComment(comment.id)">
-            <span class="icon-trash" ></span>
+            <span class="icon-trash"style="color:red; float:right;" ></span>
           </a>
     </div>
 </div>
