Fixed comments css

--- a/WebApp12Angular/src/app/advertisement/advertisement-single.component.html
+++ b/WebApp12Angular/src/app/advertisement/advertisement-single.component.html
@@ -92,7 +92,7 @@
             <div *ngIf="isLogged">
             <commentMessage></commentMessage>
             </div>
-            <p> Si quiere leer las opiniones o poner una reseña tiene que registrarse. </p>
+            <p style="margin-top: 20px;"> Si quiere leer las opiniones o poner una reseña tiene que registrarse. </p>
             <p>Si desea resgistrarse ves a la pestaña "Home" y clicka arriba a la derecha en "Acceso Usuario". </p>
           </div>
         </div>
